--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -30,6 +30,7 @@
           <div class="col-1 admin-btn">
             <!-- edit -modal trigger button -->
             <button
+              (click)="viewCourse(course.id)"
               type="button"
               class="btn edit-btn btn-primary"
               data-bs-toggle="modal"
