--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -34,6 +34,7 @@
               class="btn edit-btn btn-primary"
               data-bs-toggle="modal"
               data-bs-target="#editjob"
+              (click)="viewJob(job.id)"
             >
               <i class="fa-solid fa-wand-magic-sparkles"></i>
             </button>
@@ -53,8 +54,6 @@
       </div>
 
       <!-- modal -->
-
-      <!-- ------- -->
     </div>
     <!-- ----------------- -->
   </div>
