--- a/src/app/components/introduction/introduction.component.html
+++ b/src/app/components/introduction/introduction.component.html
@@ -27,6 +27,7 @@
           class="btn edit-btn btn-primary"
           data-bs-toggle="modal"
           data-bs-target="#editprofile"
+          (click)="viewPerson(person.id)"
         >
           <i class="fa-solid fa-wand-magic-sparkles"></i>
         </button>
