--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -32,6 +32,7 @@
             class="btn edit-btn btn-primary"
             data-bs-toggle="modal"
             data-bs-target="#editproject"
+            (click)="viewProject(project.id)"
           >
             <!-- (click)="idEdit(project.id)" -->
 
