--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -42,6 +42,7 @@
           class="btn edit-btn btn-primary"
           data-bs-toggle="modal"
           data-bs-target="#editskill"
+          (click)="viewSkill(skill.id)"
         >
           <i class="fa-solid fa-wand-magic-sparkles"></i>
         </button>
