--- a/src/app/components/socials/socials.component.html
+++ b/src/app/components/socials/socials.component.html
@@ -20,6 +20,7 @@
       class="btn edit-btn btn-primary"
       data-bs-toggle="modal"
       data-bs-target="#editsocial"
+      (click)="viewSocial(social.id)"
     >
       <i class="fa-solid fa-wand-magic-sparkles"></i>
     </button>
