--- a/src/app/modals/addcourse/addcourse.component.html
+++ b/src/app/modals/addcourse/addcourse.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit($event)" name="addcourse">
+
   <div class="modal" tabindex="-1" id="addcourse">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -16,7 +16,7 @@
           ></button>
         </div>
         <!-- body -->
-
+        <form [formGroup]="form" (ngSubmit)="onSubmit($event)" name="addcourse">
         <div class="input-group mb-3">
           <input
             type="text"
@@ -121,10 +121,16 @@
             type="submit"
             class="btn btn-primary"
             value="guardar cambios"
-            (click)="clear(); refresh()"
+            [disabled]="
+            Title?.hasError('required') ||
+            Institution?.hasError('required') ||
+            Start?.hasError('required') ||
+            End?.hasError('required')"
+            (click)="refresh()"
           />
         </div>
+      </form>
       </div>
     </div>
   </div>
-</form>
+
